# greed

./: .gitignore  .gitmodules  404.html  LICENSE.md  README.md  index.html  pyproject.toml  run.py  search.html  setup.py  setup.sh  setup_bitwuzla.sh  setup_boolector.sh  setup_yices2.sh  setup_z3.sh
Gigahorse_clients/: README.md  export_cfg.py  export_ir.py
SEtaac/: TAC_parser.py  bb.py  block.py  calldata.py  cfg.py  config.py  exceptions.py  factory.py  function.py  lambda_memory.py  lambda_memory_eager.py  memory.py  options.py  project.py  registers.py  sha3.py  sim_manager.py  simulation_manager.py  state.py  storage.py  utils.py
advanced/: index.html
advice/: index.html
api/: index.html
core/: index.html
credits/: index.html
docs/: mkdocs.yml
examples/: index.html
faq/: index.html
gigahorse_clients/: README.md  check_bad_opcode.py  export_cfg.py  export_ir.py  get_source.py  source_decompiler.x86_64.dl_compiled
greed/: block.py  cfg.py  factory.py  function.py  options.py  project.py  sha3.py  sim_manager.py  state.py
options/: index.html
quickstart/: index.html
resources/: analyze_hex.sh  analyze_source.sh  does_contract_load_in_greed.py  download_contract.py  greed_client.dl  run.py  setup.py  yices_api.py
scripts/: analyze_contract_hex.sh  analyze_deployment_hex.sh  analyze_hex.sh  analyze_hex_raw.sh  analyze_source.sh  automatic_abi_reconstruction.py  decompile.sh  differential_tracer.py  directed_search.py  does_contract_load_in_greed.py  download_contract.py  get_abi.py  get_contract.py  get_hash.py  gigahorse_guards_client.patch  (+10 more)
(+643 files in other folders)
